--- a/_config.yml
+++ b/_config.yml
@@ -270,9 +270,8 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 # -----------------------------------------------------------------------------
 
 scholar:
-
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Constantinescu]
+  first_name: [Andrei]
 
   style: apa
   locale: en
