Fix build, again

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,8 @@ jobs:
         value: ${{ github.repository }}
     - name: Install and Build 🔧
       run: |
+        apt-get install pandoc
         pip3 install --upgrade jupyter
-        npm install -g node-pandoc
         npm install -g mermaid.cli
         npm install -g purgecss
         export JEKYLL_ENV=production
