--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         value: ${{ github.repository }}
     - name: Install and Build 🔧
       run: |
-        apt-get install pandoc
+        sudo apt-get install pandoc
         pip3 install --upgrade jupyter
         npm install -g mermaid.cli
         npm install -g purgecss
