--- a/_config.yml
+++ b/_config.yml
@@ -301,13 +301,16 @@ scholar:
   group_order: descending
 
   type_names: {
-    misc: Preprints
+    misc: Preprints,
+    bachelorthesis: Bachelor Theses,
+    semesterthesis: Semester Theses,
+    masterthesis: Master Theses,
   }
 
 # Display different badges withs stats for your publications
 enable_publication_badges:
-  altmetric: true # Altmetric badge (https://www.altmetric.com/products/altmetric-badges/)
-  dimensions: true # Dimensions badge (https://badge.dimensions.ai/)
+  altmetric: false # Altmetric badge (https://www.altmetric.com/products/altmetric-badges/)
+  dimensions: false # Dimensions badge (https://badge.dimensions.ai/)
 
 # Filter out certain bibtex entry keywords used internally from the bib output
 filtered_bibtex_keywords: [abbr, abstract, arxiv, bibtex_show, eprint_to_show, html, pdf, selected, supp, blog, code, poster, slides, website, preview, altmetric]
