--- a/_config.yml
+++ b/_config.yml
@@ -414,7 +414,8 @@ jekyll_get_json:
   - data: resume
     json: assets/json/resume.json # it can also be an url
 jsonresume:
-  - basics
+  - none
+  # - basics
   # - work
   # - education
   # - publications
