--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -6,7 +6,7 @@
 
 "OPODIS 23":
   url: https://xdefago.github.io/opodis23/
-  color: "#49be25"
+  color: "#2e9010"
 
 "WINE 23":
   url: https://wine2023.shanghaitech.edu.cn/
