Add AAAI24 paper

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -20,6 +20,10 @@
   url: https://ijcai-22.org/
   color: "#bc131f"
 
+"AAAI 24":
+  url: https://aaai.org/aaai-conference/
+  color: "#fbbd3c"
+
 "AAAI 21":
   url: https://aaai.org/conference/aaai/aaai-21/
   color: "#fbbd3c"
