Add AAMAS'25 accepted papers.

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -23,6 +23,10 @@
   url: https://wine2023.shanghaitech.edu.cn/
   color: "#ac5eec"
 
+"AAMAS 25":
+  url: https://aamas2025.org/
+  color: "#00369f"
+
 "AAMAS 23":
   url: https://aamas2023.soton.ac.uk/
   color: "#00369f"
